# ethereum-sidechain

./: .gitignore  Dockerfile  Makefile  README.md  genesis.json
.github/workflows/: build.yml
cmd/sidegeth/: main.go
cmd/utils/: flags.go
consensus/bmm/: consensus.go
core/: blockchain.go  forkchoice.go  headerchain.go  tx_pool.go
core/types/: block.go  gen_header_json.go  gen_header_rlp.go  transaction.go
drivechain/: Cargo.toml  bindings.h  drivechain.go  drivechain_darwin.go  drivechain_linux.go  drivechain_ulong.go  drivechain_windows.go
drivechain/src/: lib.rs
eth/ethconfig/: config.go
internal/ethapi/: api.go
internal/flags/: categories.go
miner/: worker.go
node/: config.go  defaults.go
