[package]
name = "drivechain-eth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# We need the refund_amount_check feature, becaues Ethereum uses accounts instead of UTXOs.
drivechain-c = { git = "https://github.com/nchashch/drivechain-c", rev = "3eb65e764029a301f7e8f0b8fe03ff24c3ef15f6", features = ["refund_amount_check"] }
