[package]
name = "drivechain-eth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# We need the refund_amount_check feature, becaues Ethereum uses accounts instead of UTXOs.
drivechain-c = { git = "https://github.com/nchashch/drivechain-c", rev = "0c22cfc22debd0529db9d7b1d2ff2e137e17ca7a", features = ["refund_amount_check"] }
